feat: プロフィール画像の設定

--- a/docker/php/Dockerfile
+++ b/docker/php/Dockerfile
@@ -10,4 +10,7 @@ RUN curl -sS https://getcomposer.org/installer | php \
   && mv composer.phar /usr/local/bin/composer \
   && composer self-update
 
+RUN curl -sL https://deb.nodesource.com/setup_14.x | bash - && \
+    apt-get install -y nodejs
+
 WORKDIR /var/www
